Fixes wrapping in validation message

--- a/web_src/less/dcs.less
+++ b/web_src/less/dcs.less
@@ -67,4 +67,7 @@
   * {
     z-index: 100;
   }
+  li {
+    white-space: break-spaces;
+  }
 }
